# modelsmafia

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  test_model.py
src/configs/: config.py
src/data/: dataset.py
src/models/: model.py
src/modelsmafia/data/: dataset.py
src/modelsmafia/training/: trainer.py
src/tests/: test_model.py
src/tokenizer/: tokenizer.py
src/training/: trainer.py
