[tool.poetry]
name = "modelsmafia"
version = "0.1.0"
description = ""
authors = ["Raushan Kumar <raushanpakur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
torch = "^2.6.0"
transformers = "^4.48.2"
tokenizers = "^0.21.0"
wandb = "^0.19.5"
tqdm = "^4.67.1"
pandas = "^2.2.3"
gensim = "^4.3.3"
datasets = "^3.2.0"
mwparserfromhell = "^0.6.6"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
